--- a/index.html
+++ b/index.html
@@ -757,10 +757,10 @@
       </div>
       <div class="row">
         <div class="container contact">
-          <a class="aboutlink"href="#https://github.com/dmachine7"><i class="fab fa-github"></i></a>
-          <a class="aboutlink"href="#https://dmachine7.github.io/"><i class="fas fa-address-card"></i></a>
-          <a class="aboutlink"href="#https://www.instagram.com/dmachine7_/"><i class="fab fa-instagram"></i></a>
-          <a class="aboutlink"href="mailto:dagarwal1310@gmail.com"><i class="fas fa-envelope"></i></a>
+          <a class="aboutlink" target="_blank"href="https://github.com/dmachine7"><i class="fab fa-github"></i></a>
+          <a class="aboutlink" target="_blank"href="https://dmachine7.github.io/"><i class="fas fa-address-card"></i></a>
+          <a class="aboutlink" target="_blank"href="https://www.instagram.com/dmachine7_/"><i class="fab fa-instagram"></i></a>
+          <a class="aboutlink" target="_blank"href="mailto:dagarwal1310@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
       </div>
     </div>
